--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
@@ -16,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "ws": "^8.13.0"
   }
 }
