updating package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "",
+	"homepage": "https://github.com/MariachiMES/dave-is-at-work/tree/main/client",
 	"name": "dave-is-at-work",
 	"private": true,
 	"version": "0.0.0",
